# uwu-my-opencode

./: .dockerignore  .env.docker.example  .gitignore  .gitmodules  AGENT.md  ARCHITECTURE_CORRECTION_SUMMARY.md  DISCOVERY_OPENCODE_HEADLESS.md  GITHUB_ISSUES_SUMMARY.md  LICENSE  PLAN.md  README.md  ROADMAP.md  SKILLS.md  TASK_COMPLETION_STATUS.md  TASK_COMPLETION_SUMMARY.md  clean-deploy.sh  configure-domain.sh  create-pr.sh  deploy-plugin-system.sh  docker-compose.yml  fix-ui-routing.sh  inject-plugin-system.sh  start-and-test.sh  sync-changes.sh
.githooks/: pre-commit
daemon/: Cargo.toml
daemon/assets/: SETUP.md  SETUP_GUIDE.md  TEMPLATE.md  TEST.md  TEST_CASES.md  setup.toon  test_case.toon  tests.toon  toon.schema.toon
daemon/src/: commander.rs  config.rs  error.rs  installer.rs  main.rs  server.rs  state.rs  supervisor.rs  tunnel.rs  workspace.rs
daemon/static/: commander.html  index.html  report-detail.html  test-reports.html  test-reports.template.html
docker/: Dockerfile  entrypoint.sh
patches/: README.md
patches/opencode/: 0001-report-workspace-ui-and-html-routing.patch
scripts/: apply-submodule-patches.sh  install-docker.sh  install.sh  refresh-opencode-patch.sh  setup-hooks.sh
